--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,7 +6,11 @@
   text-align: center;
  font-weight: bold;
  font-size: 30px; 
- color: rgb(101, 137, 173);/* background-color: red; */
+ color: rgb(101, 137, 173);
+ /* padding: 20px; */
+ margin-bottom: 10px;
+ margin-top: 10px;
+ /* margin-left: 30px;background-color: red; */
 }
 .App-logo {
   height: 40vmin;
@@ -45,7 +49,12 @@
 
 
 .site-card-wrapper {
-  padding: 65px;
+  padding: 120px;
+  /* margin-right: 350; */
+  /* margin-left: 550; */
+          /* margin-top: 125; */
+          /* margin-bottom: 200; */
+margin-bottom: 10px;
   /* position: relative; */
   background: rgb(101, 137, 173);
 }
