--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,8 +8,9 @@
  font-size: 30px; 
  color: rgb(101, 137, 173);
  /* padding: 20px; */
- margin-bottom: 10px;
- margin-top: 10px;
+ margin-bottom: 20px;
+ margin-top: 20px;
+ margin-left: 25px;
  /* margin-left: 30px;background-color: red; */
 }
 .App-logo {
