--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,6 +11,7 @@
  margin-bottom: 20px;
  margin-top: 20px;
  margin-left: 25px;
+ margin-right: 25px;
  /* margin-left: 30px;background-color: red; */
 }
 .App-logo {
@@ -51,11 +52,11 @@
 
 .site-card-wrapper {
   padding: 120px;
-  /* margin-right: 350; */
-  /* margin-left: 550; */
-          /* margin-top: 125; */
-          /* margin-bottom: 200; */
-margin-bottom: 10px;
+  /* margin-right: 350;
+  margin-left: 550;
+          margin-top: 125;
+          margin-bottom: 200; */
+/* margin-bottom: 10px; */
   /* position: relative; */
   background: rgb(101, 137, 173);
 }
